[gd_scene load_steps=6 format=3 uid="uid://cqtct4bo5es3n"]

[ext_resource type="Script" uid="uid://562tav1ctutw" path="res://scripts/TypingPanel.gd" id="1_1jxtd"]
[ext_resource type="StyleBox" uid="uid://boc3wul5wjxip" path="res://themes/boxflat.tres" id="2_ylh55"]
[ext_resource type="LabelSettings" uid="uid://de705pwk1itxt" path="res://themes/spell_lbl.tres" id="3_d7kjs"]
[ext_resource type="FontFile" uid="uid://gedy68241spt" path="res://assets/fonts/PixelOperator8.ttf" id="4_gh7xp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ljces"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="TypingPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1jxtd")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -345.0
offset_top = 50.0
offset_right = 345.0
offset_bottom = 369.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ljces")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 34

[node name="PhraseLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = ExtResource("2_ylh55")
text = "Spell"
label_settings = ExtResource("3_d7kjs")

[node name="InputLine" type="LineEdit" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gh7xp")
theme_override_font_sizes/font_size = 42
theme_override_styles/focus = ExtResource("2_ylh55")
theme_override_styles/read_only = ExtResource("2_ylh55")
theme_override_styles/normal = ExtResource("2_ylh55")
placeholder_text = "Escribe aqu√≠"
caret_blink = true

[connection signal="text_changed" from="Panel/VBox/InputLine" to="." method="_on_InputLine_text_changed"]
